--- a/source/css/paginacion.css
+++ b/source/css/paginacion.css
@@ -26,9 +26,23 @@
     padding-left: 0;
     list-style: none;
     padding-bottom: 10px;
+    gap:5px;
+    margin-top: 10px;
   }
+  .justify-content-center {
+    justify-content: center !important;
+  }
+  .paginacion{
+    width: 100%; 
+    
+    position:relative !important; 
+    z-index: 70;
+    
+  }
+
   
   .page-link {
+    border-radius: 5px;
     position: relative;
     display: block;
     padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
@@ -38,18 +52,17 @@
     background-color: var(--primary);
     border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.5);
+    transition: all 0.2s linear;
   }
-  @media (prefers-reduced-motion: reduce) {
-    .page-link {
-      transition: none;
-    }
-  }
+
   .page-link:hover {
     z-index: 2;
     color: var(--bs-pagination-hover-color);
     background-color: var(--enfasis);
     border-color: var(--enfasis);
-    
+    scale: 1.2;
+    transition: all 0.2s linear;
   }
   .page-link:focus {
     z-index: 3;
