--- a/source/css/pop-up.css
+++ b/source/css/pop-up.css
@@ -174,11 +174,11 @@
     transition: all 0.3s ease;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0,0.2);
 }
-.active{
+.actives{
     background: orange;
     color: black;
 }
-.active::after{
+.actives::after{
     right: 0;
     left: unset;
 }
