--- a/source/css/tarjetas.css
+++ b/source/css/tarjetas.css
@@ -17,7 +17,7 @@
 .container_cards{
     
     position: relative;
-    
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -29,13 +29,14 @@
 }
 
 .card{
-    width: 250px;
+    width: 220px;
     margin: 10px;
     transition: all 300ms;
 }
 
 .card:hover{
-    width: 350px;
+    width: 240px;
+    cursor: pointer;
 }
 
 .card .cover{
@@ -43,6 +44,7 @@
     height: 250px;
     position: relative;
     overflow: hidden;
+    
 }
 
 .card .cover img{
@@ -53,12 +55,15 @@
     top: 40px;
     z-index: 1;
     filter: drop-shadow(5px 5px 4px rgba(0,0,0,0.5));
-    transition: all 400ms;
+    transition: all 400ms linear;
 }
 
 .card:hover .cover img{
-    top: 0px;
+    top: 20px;
+    opacity: 0;
     filter: none;
+    width: 150px;
+    transition: all 400ms linear;
 }
 
 .card .img__back{
@@ -69,18 +74,24 @@
     left: 0;
     background-size: cover;
     border-radius: 20px;
-    transition: all 300ms;
+    transition: all 300ms linear;
 }
 
 .img__back{
-    background-image: var(--background_cards);
+    background-size: contain !important;
+    background-repeat: no-repeat;
+    transition: all 500ms linear;
+    filter: contrast(0.22);
 }
 
 
 
 .card:hover .img__back{
-    bottom: -40px;
+    transition: all 500ms linear;
+    bottom: -60px;
+    filter: contrast(1);
 }
+
 
 .card .description{
     background: var(--primary);
@@ -182,4 +193,5 @@ label:hover + hr{
         top: 550px;
         
     }
+    
 }
