--- a/source/css/paginacion.css
+++ b/source/css/paginacion.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     padding-left: 0;
     list-style: none;
     padding-bottom: 10px;
