--- a/source/css/estilos-mods.css
+++ b/source/css/estilos-mods.css
@@ -42,7 +42,15 @@
     display: flex;
 }
 
-
+.video{
+    position: relative;
+    width: 100%;
+    max-width: 1280px;
+    min-width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
