--- a/source/css/estilos-mods.css
+++ b/source/css/estilos-mods.css
@@ -47,6 +47,9 @@
     width: 100%;
     max-width: 1280px;
     min-width: 200px;
+    height: 100%;
+    max-height: 720px;
+    min-height: 480px;
     display: flex;
     justify-content: center;
     align-items: center;
