--- a/source/css/cabecera.css
+++ b/source/css/cabecera.css
@@ -9,8 +9,9 @@ header{
     
 }
 .abajo_scroll{
-    background: rgb(58, 58, 58);
+    background: var(--color_header);
     transition: all 0.7s linear;
+    box-shadow: 0px 0px 30px 2px rgb(65, 65, 65);
 }
 .header_content{
     position: relative;
@@ -51,7 +52,7 @@ header{
     position: relative;
     display: flex;
     list-style: none;
-    gap: 30px;
+    gap: 8px;
     align-items: center;
 }
 .navegacion nav ul li{
@@ -59,18 +60,19 @@ header{
     
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
 }
 
 .navegacion nav ul li a{
     color: azure;
     padding: 5px;
     transition: all .4s linear;
+    background-color: #00000000;
 }
 .navegacion nav ul li a:hover{
-    color: rgb(189, 189, 189);
-    
-    transition: all .4s linear;
+    color: rgb(156, 156, 156);
+    transition: all 1s linear;
 }
 .navegacion nav ul li hr{
     height: 3px;
@@ -85,12 +87,13 @@ header{
     
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
+    
     *animation: focus-boton 4s infinite;
+    
 }
 
 #selected:hover a{
-    color: rgb(189, 189, 189);
+    color: rgb(255, 255, 255);
     
     transition: all .4s linear;
 }
@@ -134,7 +137,7 @@ header{
         flex-wrap: wrap;
     }
     .navegacion nav ul li{
-        background: #aaaaaa62;
+        background: #2222229f;
     }
     .navegacion nav ul li a{
         font-size: 12px;
@@ -145,7 +148,7 @@ header{
 }
 @media screen and (max-width: 760px){
     header{
-        background: rgba(58, 58, 58, 0.8);
+        background: rgba(58, 58, 58, 1);
         height: 120px;
 
     }
@@ -169,5 +172,14 @@ header{
     #selected hr{
         visibility: hidden;
         opacity: 0;
+    }
+}
+@media screen and (max-width: 480px){
+    header{
+        height: 15%;
+        background: rgba(58, 58, 58, 0.692);
+    }
+    .navegacion nav ul li:checked{
+        background: var(--enfasis);
     }
 }
