--- a/source/css/estilos-mods.css
+++ b/source/css/estilos-mods.css
@@ -56,13 +56,6 @@
 }
 
 
-
-@media screen and (max-width: 400px) {
-    .column{
-        flex: 100%;
-    }
-}
-
 .datos-mod{
     width: 100%;
     margin: auto;
@@ -92,8 +85,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: var(--text);
 }
+
 .descripcion-mod img{
     width: 40%;
     position: relative;
@@ -101,7 +94,10 @@
 }
 
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 480px){
+    .column{
+        flex: 100%;
+    }
     .datos_mods_responsive{
         width: 90%;
     }
@@ -110,7 +106,7 @@
         
     }
     .descripcion-mod{
-        font-size: 15px;
+        font-size: 12px;
         text-align: justify;
         display: flex;
         justify-content: center;
@@ -120,7 +116,7 @@
     .descripcion-mod h3{
         padding: 5px;
         text-align: left;
-        font-size: 12px;
+        font-size: 10px;
 
     }
     
@@ -131,6 +127,12 @@
     }
     .titulo h1{
         width: 100%;
+        font-size: 20px;
         
+    }
+    .video{
+        width: 100%;
+        height: 100%;
+        min-height: 100px;
     }
 }
