--- a/source/css/estilos.css
+++ b/source/css/estilos.css
@@ -37,17 +37,18 @@ body{
     background-repeat: no-repeat;
     height: 100%;
     overflow:visible;
-}
-
-
-.portada img{
-    width: 100%;
     
 }
+.abajo-indicador{
+    position: sticky;
+    background: rgba(0, 0, 0, 0);
+    z-index: 100;
+}
+
 .body_content{
     width: 100%;
     position: relative;
-    top:60%;
+    top:75%;
     background-image: var(--background);
     background-repeat:repeat-y;
     background-size: cover;
@@ -124,18 +125,20 @@ body{
     position: relative;
     top:10px;
     font-size: 20px;
+    
     font-weight: 50px;
-    color: transparent;
-    background-image: linear-gradient(to left, #e45412, #8776e7, #4da4dd, #4fe78f, #e442f3);    
+    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
     background-clip: text;
-    animation: color-rainbow 9s linear infinite;
-    background-size: 500%;    
-    filter:drop-shadow(5px 5px 4px rgba(255,255,255,0.2));
+    background-size: 400%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: color-rainbow 20s infinite;
 }
 .seleccion-editor:hover{
     color: rgba(0, 0, 0, 0.05);
         
 }
+
 @keyframes color-rainbow {
     0% {
         background-position: 0% 50%;
@@ -148,7 +151,11 @@ body{
         background-position: 0% 50%;
     }
 }
-
+.nsfw{
+    color: rgb(255, 57, 57);
+    font-size: 10px;
+    padding: 10px;
+}
 .glitch {
     
     text-transform: uppercase;
@@ -288,3 +295,4 @@ body{
     
     
 }
+
