--- a/source/css/tarjetas.css
+++ b/source/css/tarjetas.css
@@ -3,7 +3,6 @@
     max-width: 1000px;;
     margin-left: 14%;
     margin-right: 14%;
-    top: 300px;
     margin-bottom: 2%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -40,11 +39,13 @@
 }
 
 .card .cover{
-    width: 100%;
-    height: 250px;
-    position: relative;
-    overflow: hidden;
-    
+  width: 100%;
+  height: 250px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card .cover img{
