--- a/source/css/tarjetas.css
+++ b/source/css/tarjetas.css
@@ -39,56 +39,60 @@
 }
 
 .card .cover{
-  width: 100%;
-  height: 250px;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 100%;
+    height: 250px;
+    position: relative;
+    overflow: hidden;
+    
+
 }
 
 .card .cover img{
-  width: 200px;
-  display: block;
-  margin: auto;
-  position: relative;
-  z-index: 1;
-  filter: drop-shadow(5px 5px 4px rgba(0, 0, 0, 0.562));
-  transition: all 400ms linear;
+    width: 200px;
+    display: block;
+    margin: auto;
+    position: relative;
+    top: 40px;
+    z-index: 1;
+    filter: drop-shadow(5px 5px 4px rgba(0,0,0,0.5));
+    transition: all 400ms linear;
+    
 }
 
 .card:hover .cover img{
-  opacity: 0;
-  filter: none;
-  width: 150px;
-  transition: all 400ms linear;
+    top: 20px;
+    opacity: 0;
+    filter: none;
+    width: 150px;
+    transition: all 400ms linear;
 }
 
 .card .img__back{
-  width: 100%;
-  height: 200px;
-  position: absolute;
-  background-position: center;
-  background-size: cover;
-  border-radius: 20px;
-  transition: all 300ms linear;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    bottom: -80px;
+    left: 0;
+    background-size: cover;
+    border-radius: 20px;
+    transition: all 300ms linear;
 }
 
 .img__back{
-  background-size: contain !important;
-  background-repeat: no-repeat;
-  transition: all 500ms linear;
-  filter: contrast(0.22);
+    background-size: 100% !important;
+    background-repeat: no-repeat;
+    transition: all 500ms linear;
+    filter: contrast(0.22);
 }
 
 
 
 .card:hover .img__back{
-  transition: all 500ms linear;
-
-  filter: contrast(1);
+    transition: all 500ms linear;
+    bottom: -60px;
+    filter: contrast(1);
 }
+
 
 
 .card .description{
