--- a/source/css/estilos.css
+++ b/source/css/estilos.css
@@ -67,13 +67,13 @@ body{
     border-style: none;
 }
 .contenido{
-    position: absolute;
-    
+    position: relative;
     margin-top: 10px;
     margin-left: 14%;
     margin-right: 14%;
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.3);
 
     *border-top-left-radius: 10px;
