--- a/source/css/cabecera.css
+++ b/source/css/cabecera.css
@@ -79,7 +79,7 @@ header{
     background-color: rgba(0, 0, 0, 0);
 }
 .navegacion nav ul li:hover  hr{
-    background-color: var(--enfasis);
+    background-color: white;
     width: 100%;
 }
 #selected{
