--- a/source/css/footer.css
+++ b/source/css/footer.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     z-index: 80;
-    background-color: #363636;
+    background-color: var(--enfasis);
     box-shadow: 0px 0px 10px 2px black;
     color: white;
     
