--- a/source/css/tarjetas.css
+++ b/source/css/tarjetas.css
@@ -4,6 +4,7 @@
     margin-left: 14%;
     margin-right: 14%;
     margin-bottom: 2%;
+    margin-top: 5%
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-top-color: var(--enfasis);
