--- a/source/css/footer.css
+++ b/source/css/footer.css
@@ -26,6 +26,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    background-color: var(--enfasis_transparente);
 }
 .derecho{
     padding: 10px;
@@ -87,7 +88,7 @@
 @media screen and (max-width: 500px){
     .derecho{
         width: 30%;
-        font-size: 10px;
+        font-size: 1px;
         flex-direction: column;
         align-items: center;
         margin: 0;
