--- a/source/css/estilos-mods.css
+++ b/source/css/estilos-mods.css
@@ -1,13 +1,13 @@
 .datos_mods_responsive{
     position: relative;
-    top:50px;
-    width: 70%;
-    margin: auto;
-    
-    background-color: rgba(255, 255, 255, 0.3);
+    max-width: 1000px;;
+    margin-left: 14%;
+    margin-right: 14%;
+    margin-bottom: 2%;
+    margin-top: 5%;
     border-radius: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 0px 80px 1px rgb(44, 44, 44);
 }
 
 .imagenes{
@@ -56,10 +56,7 @@
 }
 
 
-.datos-mod{
-    width: 100%;
-    margin: auto;
-}
+
 
 .datos-mod h1{
     text-align: center;
@@ -98,9 +95,7 @@
     .column{
         flex: 100%;
     }
-    .datos_mods_responsive{
-        width: 90%;
-    }
+    
     .descripcion-mod img{
         width: 50%;
         
