--- a/source/css/pop-up.css
+++ b/source/css/pop-up.css
@@ -39,6 +39,14 @@
     --enfasis_transparente: #974be286 ;
 }
 
+[data-colores="AngelG4el"] {
+    --enfasis:#1b0036;
+    --enfasis_transparente: #1b003686 ;
+}
+[data-colores="Slender"] {
+    --enfasis:#741201;
+    --enfasis_transparente: #74120186 ;
+}
 
 
 /* Pop ups */
@@ -238,6 +246,20 @@ input:checked + .slider1:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+}
+.codigo{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.codigo input[type="text"]{
+    width: 100%;
+    text-align: center;
+    height: 30px;
+    margin-bottom: 10px;
 }
 
 @media screen  and (max-width: 900px){
