--- a/source/css/pop-up.css
+++ b/source/css/pop-up.css
@@ -47,6 +47,10 @@
     --enfasis:#741201;
     --enfasis_transparente: #74120186 ;
 }
+[data-colores="Just Monika"] {
+    --enfasis:#741201;
+    --enfasis_transparente: #74120186 ;
+}
 
 
 /* Pop ups */
