--- a/source/css/estilos.css
+++ b/source/css/estilos.css
@@ -48,7 +48,7 @@ body{
 .body_content{
     width: 100%;
     position: relative;
-    top:70%;
+    top:100%;
     
     background-image: var(--background);
     background-repeat:repeat-y;
@@ -57,7 +57,39 @@ body{
     overflow: hidden;
     margin: auto;
 }
-
+#indicador_abajo{
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0);
+    top: 85%;
+}
+@keyframes indicador{
+    0%{
+        opacity:0;
+    }
+    25%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+    75%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+#indicador_abajo img{
+    position: relative;
+    width: 5%;
+    animation: indicador 5s linear infinite;
+    transition: all 0.3s linear;
+    filter: drop-shadow(0px 0px 10px 10px black);
+}
 .body_content > hr{
     color: var(--enfasis);
     width: 100%;
