--- a/source/css/estilos.css
+++ b/source/css/estilos.css
@@ -238,6 +238,9 @@ body{
     }
 }
 @media screen and (max-width: 1200px){
+    #indicador_abajo{
+        top:40%;
+    }
     .contenido{
         display: flex;
         flex-direction: column;
@@ -300,7 +303,9 @@ body{
 }
 
 @media screen and (max-width: 840px){
-    
+    #indicador_abajo{
+        top:30%;
+    }
     .contenido{
         display: flex;
         flex-direction: column;
@@ -327,4 +332,9 @@ body{
     }
     
     
+}
+@media screen and (max-width: 500px){
+    #indicador_abajo{
+        visibility: hidden !important;
+    }
 }
